--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>百草园</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jerrymouse0/Jerrymouse0.github.io/master/%E9%9B%AA%E8%8A%B1.ico" type="image/x-icon">
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://www.Jerrymouse0.github.io/master/index.css">
+    <link rel="stylesheet" type="text/css" href="http://Jerrymouse0.github.io/index.css">
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!--[if lt IE 9]>
@@ -60,7 +60,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="www.Jerrymouse0.github.io" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
+            <a href="www.daniel1024.xyz" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -164,7 +164,7 @@
                 <caption class="text-center h2 text-warning">项目经验</caption>
                 <tr>
                     <td>个人网站：</td>
-                    <td><a href="http://www.morning1014.info" style="display: inline;color: blue">http://www.morning1014.info</a><span>&nbsp;&nbsp;完善中…</span></td>
+                    <td><a href="http://www.morning1014.info" style="display: inline;color: blue">http://www.daniel1024.xyz</a><span>&nbsp;&nbsp;完善中…</span></td>
                 </tr>
                 <tr>
                     <td>软件环境：</td>
@@ -275,7 +275,7 @@
                         <h3 class="panel-title">Vue简易留言板</h3>
                     </div>
                     <div class="panel-body text-center h4">
-                        <a href="http://www.morning1014.info/vue-simple-message-board.html" style="color: green;font-style: italic;">点击进入</a>
+                        <a href="http://Jerrymouse0.github.io/vue-simple-message-board.html" style="color: green;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                         <h3 class="panel-title">倒计时效果</h3>
                     </div>
                     <div class="panel-body text-center h4">
-                        <a href="http://www.morning1014.info/Countdown.html" style="color: orange;font-style: italic;">点击进入</a>
+                        <a href="http://Jerrymouse0.github.io/Countdown.html" style="color: orange;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
@@ -297,7 +297,7 @@
                         <h3 class="panel-title">更多demo请点击↓↓↓</h3>
                     </div>
                     <div class="panel-body text-center h2">
-                        <a href="http://www.morning1014.info/demo.html" style="color: red;font-style: italic;"><strong>进入demo汇总页面</strong></a>
+                        <a href="http://Jerrymouse0.github.io/demo.html" style="color: red;font-style: italic;"><strong>进入demo汇总页面</strong></a>
                     </div>
                 </div>
             </div>
@@ -305,10 +305,10 @@
     </div>
     <div id="4">
         <div id="footer">
-            <p class="github"><img src="http://www.morning1014.info/github.png" alt="Github" class="foot">&nbsp;Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
-            <p class="email"><img src="http://www.morning1014.info/email.png" alt="Email" class="foot">&nbsp;Email：morning_1014@163.com</p>
-            <p class="QQ"><img src="http://www.morning1014.info/qq.png" alt="QQ" class="foot">&nbsp;QQ：799910120</p>
-            <p class="tel"><img src="http://www.morning1014.info/tel.png" alt="Tel" class="foot">&nbsp;Tel：18827062636</p>
+            <p class="github"><img src="http://Jerrymouse0.github.io/github.png" alt="Github" class="foot">&nbsp;Github：<a href="https://github.com/Jerrymouse0" target="_blank" id="github" style="display: inline;color: skyblue">https://github.com/Jerrymouse0</a></p>
+            <p class="email"><img src="http://Jerrymouse0.github.io/email.png" alt="Email" class="foot">&nbsp;Email：morning_1014@163.com</p>
+            <p class="QQ"><img src="http://Jerrymouse0.github.io/qq.png" alt="QQ" class="foot">&nbsp;QQ：799910120</p>
+            <p class="tel"><img src="http://Jerrymouse0.github.io/tel.png" alt="Tel" class="foot">&nbsp;Tel：18827062636</p>
         </div>
     </div>
 </body>
