--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="www.daniel1024.xyz" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
+            <a href="http://www.daniel1024.xyz" class="navbar-brand" style="color:white;font-size: 2.5em">百草园</a>
         </div>
         <div class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav navbar-right">
