--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     本人热爱前端开发相关的工作，喜欢做一些网页的布局和特效。希望能通过自己的代码实现各种风格的网页。对HTML语义化有一定的理解；掌握CSS的一些布局方法，了解CSS3的简单动画；能手写原生JS代码完成普通的效果，有DOM编程的基础，了解闭包，原型，作用域，继承相关的内容；对Ajax，JSON，跨域有基本了解；能使用jQuery写出简单的特效；会用bootstrap做出响应式的布局；目前正在学习HTML5画布和离线存储，Vue.js，node.js;
                 </p>
                 <p class="p2">
-                    在校学习过C++，数据结构，数据库原理，计算机组成原理，计算机网络，JSP，Delphi，SQLserver，XML，SPSS等课程。能熟练运用office软件，sublime编辑器，会使用PS切图，以及firebug调试工具。
+                    在校学习过C++，数据结构，Access，数据库原理，计算机组成原理，Delphi，SQL Server，JSP，运筹学，管理信息系统，XML，SPSS数据分析，医院信息系统，计算机网络，数字医学图像，Java，决策支持系统等等课程。能熟练运用office软件，sublime，vscode等软件，会使用PS切图。
                 </p>
                 <p class="p3">
                     由于没有相关的项目经验，导致很多对知识的运用不熟练，希望能够参与到公司具体的项目中去，学习更多的知识和技能，提升自己，为企业创造价值！
