--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <caption class="text-center h2 text-warning">项目经验</caption>
                 <tr>
                     <td>个人网站：</td>
-                    <td><a href="http://www.morning1014.info" style="display: inline;color: blue">http://www.daniel1024.xyz</a><span>&nbsp;&nbsp;完善中…</span></td>
+                    <td><a href="http://www.daniel1024.xyz" style="display: inline;color: blue">http://www.daniel1024.xyz</a><span>&nbsp;&nbsp;完善中…</span></td>
                 </tr>
                 <tr>
                     <td>软件环境：</td>
@@ -241,10 +241,10 @@
             <div class="col-md-4">
                 <div class="panel panel-warning">
                     <div class="panel-heading text-center">
-                        <h3 class="panel-title">瀑布流照片墙</h3>
+                        <h3 class="panel-title">vue书城</h3>
                     </div>
                     <div class="panel-body text-center h4">
-                        <a href="" style="color: green;font-style: italic;">点击进入</a>
+                        <a href="https://github.com/Jerrymouse0/mock" style="color: green;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
