--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
             <div class="col-md-4">
                 <div class="panel panel-danger">
                     <div class="panel-heading">
-                        <h3 class="panel-title text-center">JS轮播图</h3></div>
+                        <h3 class="panel-title text-center">H5时钟</h3></div>
                     <div class="panel-body text-center h4">
-                        <a href="" style="color: purple;font-style: italic;">点击进入</a>
+                        <a href="http://Jerrymouse0.github.io/clock.html" style="color: purple;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
@@ -251,10 +251,10 @@
             <div class="col-md-4">
                 <div class="panel panel-info">
                     <div class="panel-heading text-center">
-                        <h3 class="panel-title">淘宝放大镜效果</h3>
+                        <h3 class="panel-title">todoList</h3>
                     </div>
                     <div class="panel-body text-center h4">
-                        <a href="" style="color: orange;font-style: italic;">点击进入</a>
+                        <a href="http://111.231.252.12:8888/todoList/todolist.html" style="color: orange;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
@@ -263,9 +263,9 @@
             <div class="col-md-4">
                 <div class="panel panel-danger">
                     <div class="panel-heading">
-                        <h3 class="panel-title text-center">购物车效果</h3></div>
+                        <h3 class="panel-title text-center">轮播图</h3></div>
                     <div class="panel-body text-center h4">
-                        <a href="" style="color: purple;font-style: italic;">点击进入</a>
+                        <a href="http://111.231.252.12:8888/demo.html" style="color: purple;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
