--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title text-center">轮播图</h3></div>
                     <div class="panel-body text-center h4">
-                        <a href="http://111.231.252.12:8888/demo.html" style="color: purple;font-style: italic;">点击进入</a>
+                        <a href="http://111.231.252.12:8888/swiper.html" style="color: purple;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
