--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="col-md-4">
                 <div class="panel panel-warning">
                     <div class="panel-heading text-center">
-                        <h3 class="panel-title">vue书城</h3>
+                        <h3 class="panel-title">Vue书城移动端</h3>
                     </div>
                     <div class="panel-body text-center h4">
                         <a href="https://github.com/Jerrymouse0/mock" style="color: green;font-style: italic;">点击进入</a>
@@ -286,6 +286,37 @@
                     </div>
                     <div class="panel-body text-center h4">
                         <a href="http://Jerrymouse0.github.io/Countdown.html" style="color: orange;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title text-center">获取IP及地址等</h3></div>
+                    <div class="panel-body text-center h4">
+                        <a href="http://Jerrymouse0.github.io/getIP.html" style="color: purple;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-warning">
+                    <div class="panel-heading text-center">
+                        <h3 class="panel-title">Vue简易购物车</h3>
+                    </div>
+                    <div class="panel-body text-center h4">
+                        <a href="http://111.231.252.12:8888/todoList/cart.html" style="color: green;font-style: italic;">点击进入</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading text-center">
+                        <h3 class="panel-title">Express+MySQL多表增删改查</h3>
+                    </div>
+                    <div class="panel-body text-center h4">
+                        <a href="https://github.com/Jerrymouse0/myapp" style="color: orange;font-style: italic;">点击进入</a>
                     </div>
                 </div>
             </div>
