--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="http://apps.bdimg.com/libs/html5shiv/r29/html5.min.js"></script>
         <script src="http://apps.bdimg.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+    <!--
     <script type="text/javascript">
     $(function() {
         var x = setInterval(function() {
@@ -344,4 +345,4 @@
     </div>
 </body>
 
-</html>
+</html>-->
